--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,22 +2,12 @@ project(geipac)
 cmake_minimum_required(VERSION 2.8)
 aux_source_directory(. SRC_LIST)
 add_executable(${PROJECT_NAME} ${SRC_LIST})
-set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -std=c++11")
-
-###############################################################################
-# Set version
-###############################################################################
-
-set(GEIPAC_VERSION_MAJOR "0")
-set(GEIPAC_VERSION_MINOR "2")
-set(GEIPAC_VERSION_PATCH "0")
-configure_file( version_config.h.in ${CMAKE_CURRENT_BINARY_DIR}/version_config.h )
-
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
 ###############################################################################
 # Check for dependencies
-# if mpi not found the code will be compiled for serial execution
-# Uncomment the find of MPI to compile and run serially
+# if OpenMP not found the code will be compiled for serial execution
+# Uncomment the find of OpenMP to compile and run serially
 ###############################################################################
 
 find_package(Boost COMPONENTS filesystem system program_options REQUIRED)
@@ -47,6 +37,6 @@ endif(OPENMP_FOUND)
 ###############################################################################
 # Link and include
 ###############################################################################
-
+include(version)
 include_directories(${CMAKE_CURRENT_BINARY_DIR} ${Boost_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR})
 target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
