added static build options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,23 @@
 project(geipac)
 cmake_minimum_required(VERSION 2.8)
 aux_source_directory(. SRC_LIST)
-add_executable(${PROJECT_NAME} ${SRC_LIST})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -std=c++11")
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
 
 ###############################################################################
+# Link to static libraries
+###############################################################################
+
+if (STATIC)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static")
+  set(Boost_USE_STATIC_LIBS ON)
+  set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
+  set(BUILD_SHARED_LIBS OFF)
+  set(CMAKE_EXE_LINKER_FLAGS "-static")
+endif(STATIC)
+
+###############################################################################
 # Check for dependencies
-# if OpenMP not found the code will be compiled for serial execution
-# Uncomment the find of OpenMP to compile and run serially
 ###############################################################################
 
 find_package(Boost COMPONENTS filesystem system program_options REQUIRED)
@@ -17,7 +26,6 @@ if(Boost_FOUND)
 else(Boost_FOUND)
   message(FATAL_ERROR "The package Boost has not been found")
 endif(Boost_FOUND)
-link_directories(${Boost_INCLUDE_DIRS})
 
 set(EIGEN3_INCLUDE_DIR ${EIGEN_INCLUDE_DIR})
 if(EIGEN3_INCLUDE_DIR)
@@ -25,6 +33,11 @@ if(EIGEN3_INCLUDE_DIR)
 else(EIGEN3_INCLUDE_DIR)
   message(FATAL_ERROR "Eigen3 installation has not been found")
 endif(EIGEN3_INCLUDE_DIR)
+
+###############################################################################
+# if OpenMP not found the code will be compiled for serial execution
+# Comment the find of OpenMP to compile and run serially
+###############################################################################
 
 find_package(OpenMP)
 if (OPENMP_FOUND)
@@ -39,5 +52,7 @@ endif(OPENMP_FOUND)
 # Link and include
 ###############################################################################
 include(version)
+add_executable(${PROJECT_NAME} ${SRC_LIST})
 include_directories(${CMAKE_CURRENT_BINARY_DIR} ${Boost_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR})
+link_directories(${Boost_INCLUDE_DIRS})
 target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
